error_templates/java/test_files/unreachable_statement_error/test.txt
template: "Java.UnreachableStatementError"
---
Unreachable.java:5: error: unreachable statement
        System.out.println("c");
        ^
1 error
===
template: "Java.UnreachableStatementError"
---
# UnreachableStatementError
This error occurs because there's code after a return statement, which can never be reached as the function has already exited.

## Steps to fix
1. Remove the code after the `return` statement.

```diff
    System.out.println("b");
    return;
-   System.out.println("c");
}
```
